Fix Dark Mode Toggle Bug
I noticed   that in dark mode, the thumb wasn't in the correct position on 1440p. It was due to the use of pixels that should have been converted to rem.

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -103,5 +103,5 @@
 }
 
 .dark-mode-switch input:checked ~ .slider img {
-  transform: translateX(25.3px);
+  transform: translateX(1.58125rem);
 }
